# course_paper_sql

./: README.md  pyproject.toml
src/: connect_bd.py  database.ini  get_api_data.py  main.py  manager.py  upload_bd.py  utils.py
